@@ -26,6 +26,8 @@ Improvements
 * [`2973 <https://cta-redmine.irap.omp.eu/issues/2973>`_] -
   Improve COMPTEL classes.
   Implement methods to remove models from a response cache.
+  Add ``GCOMObservation::drm(GModels&)`` method.
+  Add ``GCOMDri::cone_content()`` method.
 * Add ``GGti::overlap()`` method.
 * [`2909 <https://cta-redmine.irap.omp.eu/issues/2909>`_] -
   Add ``GTime.datetime()`` method and add optional precision to ``GTime.utc()`` method.
