@@ -87,6 +87,7 @@ public:
     const GSkyMap&  drg(void) const;
     const GSkyMap&  drx(void) const;
     const GCOMDri&  drm(const GSource& source) const;
+    GCOMDri         drm(const GModels& models) const;
     const GCOMTim&  tim(void) const;
     const GCOMOads& oads(void) const;
 };
